:bug: fix scrollbar issues in firefox

--- a/app/styles/core-ui/History.styl
+++ b/app/styles/core-ui/History.styl
@@ -61,14 +61,14 @@
 
   .column-content {
     absolute(left right bottom 0 top $header-height);
-    overflow: scroll;
+    overflow: auto;
   }
 }
 
 
 #git-log-table, #git-graph-column {
   flex-basis: 0;
-  overflow: scroll;
+  overflow: auto;
 }
 
 
@@ -77,7 +77,7 @@
 .git-logs-view {
   scrollBar();
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   .git-logs-table {
     position: relative;
